objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxRollCutoff__c</fullName>
        <label>Tax Roll Cutoff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TransferConditions__c</fullName>
        <label>Transfer Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TransferofPACEAssessment__c</fullName>
        <label>Transfer of PACE Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnderwritingRequirements__c</fullName>
        <label>Underwriting Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UnderwritingStatus__c</fullName>
        <label>Underwriting Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValuationMethod__c</fullName>
        <label>Valuation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Is</fullName>
                </value>
                <value>
                    <fullName>As Complete</fullName>
                </value>
                <value>
                    <fullName>As Stabilized</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>ActiveProgram__c</columns>
        <columns>Priority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>